feat(ui): overhaul dark theme, fix controls layout, and improve playback buttons
- Fix `reloadMusic` action handler and `currentFolder` initialization in Controller.
- Fix time labels clipping by adjusting timeline HBox layout and constraints.
- Prevent layout shift when toggling Play/Pause SVG icon via fixed StackPane bounds.
- Align central media controls while positioning reload button to the right.
- Add tooltips to all interactive buttons.
- Enhance dark theme palette with glowing green accents and polished Folder button styles.
- Add `:pressed` visual feedback for icon buttons and fix cursor hand behavior.
- Delete dependency javafx-swing.